integration with sauce labs

--- a/src/test/resources/configuration/config.properties
+++ b/src/test/resources/configuration/config.properties
@@ -1,3 +1,10 @@
+remote=true
 browser=chrome
 test.website.url=http://stgcerb.cerebruminfotech.com:9069/admin/
 default.wait.time=10
+saucelab.username=oauth-avirdi711-4131b
+saucelab.secret.key=7b2d258e-4ea2-4851-9bda-694cbe81e64c
+saucelab.link=@ondemand.apac-southeast-1.saucelabs.com:443/wd/hub
+platform=windows 10
+browser.version=90
+test.name=Cere Consult
