--- a/src/test/resources/configuration/config.properties
+++ b/src/test/resources/configuration/config.properties
@@ -2,7 +2,7 @@ remote=false
 browser=chrome
 test.website.url=http://stgcerb.cerebruminfotech.com:9069/admin/
 default.wait.time=10
-default.download.location=src/test/resources/download
+default.download.location=\\src\\test\\resources\\download
 default.screenshot.location=target/screenshots
 saucelab.username=oauth-avirdi711-4131b
 saucelab.secret.key=7b2d258e-4ea2-4851-9bda-694cbe81e64c
