changes in read email method

--- a/src/test/resources/configuration/config.properties
+++ b/src/test/resources/configuration/config.properties
@@ -29,5 +29,13 @@ mail.smtp.port= 587
 #--------------------------------------------------------------------------------------
 #This feature only works with Microsoft domains accounts and with microsoft smtp server
 #Set value true if you want to add zip to email with location of folder
-add.zip.mail=
-zip.folder.location=
+add.zip.to.mail=true
+#Provide location from project directory
+location.folder.to.be.zip=/allure-report
+zip.folder.location=/src/test/resources/testdata/allure-report.zip
+#---------------------------------------------------------------------------------------
+mail.imaps.host=imap.googlemail.com"
+mail.imaps.port=993
+read.mail.from=arshvirdi711@gmail.com
+read.mail.password=arsh711singh
+read.mail.from.sender.address=arsh711singh@gmail.com
