--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,12 +21,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '8'
         distribution: 'temurin'
         cache: maven
+        
     - name: Download Google Chrome 
       run: wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb 
       
@@ -35,6 +36,17 @@ jobs:
       
     - name: Build with Maven
       run: mvn clean test -Dcucumber.options="--tags @ValidLogin" 
+      
+    - name: Upload Allure results
+      uses: actions/upload-artifact@v3.1.1
+      with:
+        name: Allure Results
+        path: ~/target/allure-results
+      
+    - name: Cache maven dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
