--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,11 +41,12 @@ jobs:
       uses: actions/upload-artifact@v3.1.1
       with:
         name: Allure Results
-        path: ~/target/allure-results
+        path: ./target/allure-results
       
     - name: Cache maven dependencies
       uses: actions/cache@v3
       with:
+        key: maven
         path: ~/.m2
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
