--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,6 +38,7 @@ jobs:
       run: mvn clean test -Dcucumber.options="--tags @ValidLogin" 
       
     - name: Upload Allure results
+      run: ls
       uses: actions/upload-artifact@v3.1.1
       with:
         name: Allure Results
