--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,22 +29,26 @@ jobs:
         cache: maven
         
     - name: Download Google Chrome 
-      run: wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb 
-      
-    - name: Install downloaded package
-      run: sudo dpkg -i google-chrome-stable_current_amd64.deb
-      
+      run: |
+            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb 
+            sudo dpkg -i google-chrome-stable_current_amd64.deb
+            sudo apt-get install -y xvfb
+            sudo apt-get -y install xorg xvfb gtk2-engines-pixbuf
+            sudo apt-get -y install dbus-x11 xfonts-base xfonts-100dpi xfonts-75dpi xfonts-cyrillic xfonts-scalable
+            sudo apt-get -y install imagemagick x11-apps
+            Xvfb -ac :99 -screen 0 1280x1024x16 &
+            export DISPLAY=:99
+
     - name: Open Chrome
       run: google-chrome
       
     - name: Build with Maven
       run: mvn clean test -Dcucumber.options="--tags @ValidLogin" 
     
-    - name: CD target
-      run: cd /target
-      
-    - name: Zip allure results 
-      run: zip -r allure-results.zip allure-results
+    - name: Zip Allure report
+      run: |
+            cd /target
+            zip -r allure-results.zip allure-results
       
     - name: Upload Allure results
       uses: actions/upload-artifact@v3.1.1
