--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,17 +28,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
         
-    - name: Google Chrome 
-      run: |
-            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb 
-            sudo dpkg -i google-chrome-stable_current_amd64.deb
-            sudo apt-get install -y xvfb
-            sudo apt-get -y install xorg xvfb gtk2-engines-pixbuf
-            sudo apt-get -y install dbus-x11 xfonts-base xfonts-100dpi xfonts-75dpi xfonts-cyrillic xfonts-scalable
-            sudo apt-get -y install imagemagick x11-apps
-            Xvfb -ac :99 -screen 0 1280x1024x16 &
-            export DISPLAY=:99
-            google-chrome 
+    - name: Setup Chrome
+      uses: browser-actions/setup-chrome@v0.0.0
       
     - name: Build with Maven
       run: mvn clean test -Dcucumber.options="--tags @ValidLogin" 
