--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,7 @@ jobs:
       uses: browser-actions/setup-chrome@latest
     
     - name: Build with Maven
-      run: mvn clean test -Dcucumber.filter.tags="@ValidLogin" 
+      run: cucumberui.bat
     
     - name: Zip Allure report
       run: |
