--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -30,11 +30,12 @@ jobs:
         
     - name: Setup Chrome
       uses: browser-actions/setup-chrome@latest
+      
     
     - name: Build with Maven
       run: | 
             ls 
-            cucumberui.bat
+            mvn clean test -Dcucumber.options="--tags @ValidLogin"
     
     - name: Zip Allure report
       run: |
