--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Build with Maven
       run: | 
             ls 
-            mvn clean test -Dcucumber.options="--tags @ValidLogin"
+            mvn clean test
     
     - name: Zip Allure report
       run: |
